--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,33 @@
-sphinx>=5
+alabaster==0.7.13
+Babel==2.11.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+docutils==0.18.1
+idna==3.4
+imagesize==1.4.1
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+packaging==23.0
+Pygments==2.14.0
+pytz==2022.7.1
+requests==2.28.2
+robotpy-sphinx-plugin==0.1.6
+setuptools-scm==7.1.0
+snowballstemmer==2.2.0
+Sphinx==5.3.0
+sphinx-automodapi==0.14.1
+sphinx-reredirects==0.1.1
 sphinx-rtd-theme==1.2.0rc1
-sphinx-reredirects
-robotpy-sphinx-plugin
-sphinx-inline-tabs
-sphinxext-opengraph
+sphinx_autodoc_typehints==1.21.7
+sphinx_inline_tabs==2022.1.2b11
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+sphinxcontrib.applehelp==1.0.3
+sphinxext-opengraph==0.7.5
+toml==0.10.2
+tomli==2.0.1
+typing_extensions==4.4.0
+urllib3==1.26.14
