--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,37 @@
-alabaster==0.7.13
-Babel==2.11.0
-certifi==2023.7.22
-charset-normalizer==3.0.1
-docutils==0.18.1
-idna==3.4
+alabaster==0.7.16
+Babel==2.14.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+docutils==0.20.1
+idna==3.6
 imagesize==1.4.1
 Jinja2==3.1.3
-MarkupSafe==2.1.2
-packaging==23.0
-Pygments==2.15.0
-pytz==2022.7.1
+MarkupSafe==2.1.3
+packaging==23.2
+Pygments==2.17.2
+pytz==2023.3.post1
 requests==2.31.0
-robotpy-sphinx-plugin==0.1.6
-setuptools-scm==7.1.0
+setuptools==69.0.3
+setuptools-scm==8.0.4
 snowballstemmer==2.2.0
-Sphinx==5.3.0
-sphinx-automodapi==0.14.1
-sphinx-reredirects==0.1.1
-sphinx-rtd-theme==1.2.0rc1
-sphinx_autodoc_typehints==1.21.7
-sphinx_inline_tabs==2022.1.2b11
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.0
+Sphinx==7.2.6
+sphinx-autodoc-typehints==1.25.2
+sphinx-automodapi==0.16.0
+sphinx-reredirects==0.1.3
+sphinx-rtd-theme==2.0.0
+sphinx_inline_tabs==2023.4.21
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-sphinxcontrib.applehelp==1.0.3
-sphinxext-opengraph==0.7.5
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+sphinxext-opengraph==0.9.1
 toml==0.10.2
 tomli==2.0.1
-typing_extensions==4.4.0
-urllib3==1.26.18
+typing_extensions==4.9.0
+urllib3==2.1.0
+
+# Just use the latest
+robotpy-sphinx-plugin
